# mavros-px4-vehicle

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
docs/: prerequisites.md
scripts/: drone_publish_velcmd.py  offboard_fly_square.py  offboard_hover.py  offboard_rover_square.py  teleop_rover_with_velcmd.py  use_vehicle_parameters.py
scripts/experimental/: offboard_flight_avoidance_vertical.py
src/mavros_px4_vehicle/: __init__.py  px4_copter.py  px4_modes.py  px4_offboard_modes.py  px4_offboard_pub.py  px4_vehicle.py  px4_vehicle_base.py  ros_handle.py
src/mavros_px4_vehicle/experimental/: avoidance.py
test/: test_copter.py  test_vehicle.py  test_vehicle.test
